--- a/prepare_plot_train_save.ipynb
+++ b/prepare_plot_train_save.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "in case you run into any dependency error, just run  `pip install *package name of missing dependency*`.\n",
     "\n",
-    "You can always google to find the exact package name, some included in this code are, `opencv-python` for cv2, `scikit-learn` for sklearn, `matplo`t for matplotlib etc."
+    "You can always google to find the exact package name, some included in this code are, `opencv-python` for cv2, `scikit-learn` for sklearn, `matplotlib` for matplotlib etc."
    ]
   },
   {
